# minecraft_data_extractor

./: .gitignore  Cargo.toml  build.rs
src/: client_json.rs  extractors.rs  main.rs  mappings.rs  mappings_brand.rs  minijvm.rs  version_client_json.rs  version_json.rs  version_manifest.rs
src/extractors/: decomp_class.rs  mapped_class.rs  mapped_server_jar.rs  mojang_mappings.rs  packets.rs  read_class.rs  server_jar.rs  version_json.rs
src/extractors/decomp_class/: cfg.rs
src/extractors/mapped_class/: descriptors.rs
src/extractors/packets/: using_protocols.rs
src/minijvm/: decomped.rs  descriptors.rs  ident.rs  signatures.rs
src/minijvm/decomped/: visitor.rs
src/minijvm/decomped/visitor/: mut_visitor.rs  ref_visitor.rs
