[package]
name = "mcdata"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
anyhow = { version = "1.0.100", features = ["backtrace"] }
async-trait = "0.1.89"
bincode = "2.0.1"
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.5.53", features = ["derive"] }
derive_more = { version = "2.0.1", features = ["full"] }
futures = "0.3.31"
itertools = "0.14.0"
noak = "0.6.3"
nom = "8.0.0"
ouroboros = "0.18.5"
rayon = "1.11.0"
rc-zip = "5.4.1"
rc-zip-sync = "4.4.2"
reqwest = { version = "0.12.24", features = ["json", "stream"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
tempfile = "3.23.0"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"

[build-dependencies]
hex = "0.4.3"
sha2 = "0.10.9"
walkdir = "2.5.0"
